objects/Transaction_Contact_Method__c/Transaction_Contact_Method__c.object-meta.xml
<CustomObject>
    <label>Transaction Contact Method</label>
    <nameField>
        <label>Transaction Contact Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Contact Methods</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>