objects/Transaction_Contact_Method__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Transaction Contact Methods</relationshipLabel>
    <relationshipName>Transaction_Contact_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>