objects/Transaction_Contact_Method__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transaction Contact Methods</relationshipLabel>
    <relationshipName>Transaction_Contact_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>