objects/Transaction_Contact_Method__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Transaction Contact Methods</relationshipLabel>
    <relationshipName>Transaction_Contact_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>