objects/Transaction_Contact_Method__c/fields/Transaction_Contact_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Contact_Purpose__c</fullName>
    <label>Transaction Contact Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Purpose</valueSetName>
    </valueSet>
</CustomField>